<resources>
    <string name="copyright" translatable="false">© 2017–2022 Georg Sieber</string>
    <string name="developer_website" translatable="false">https://georg-sieber.de</string>
    <string name="developer_email" translatable="false">support@georg-sieber.de</string>
    <string name="repo_link" translatable="false">https://github.com/schorschii/CustomerDB-Android</string>
    <string name="server_repo_link" translatable="false">https://github.com/schorschii/CustomerDB-Server</string>
    <string name="unlock_api" translatable="false">"https://apps.sieber.systems/activate"</string>
    <string name="callerid_authority" translatable="false">de.georgsieber.customerdb.callerid</string>
    <string name="plugin_app_package_name" translatable="false">de.georgsieber.customerdb_plugin</string>
    <string name="plugin_app_url" translatable="false">https://github.com/schorschii/CustomerDB-Android-Plugin</string>
    <plurals name="customersamount">
        <item quantity="one">%d customer</item>
        <item quantity="other">%d customers</item>
    </plurals>
    <plurals name="vouchersamount">
        <item quantity="one">%d voucher</item>
        <item quantity="other">%d vouchers</item>
    </plurals>
    <plurals name="birthdayssoon">
        <item quantity="one">%d birthday soon</item>
        <item quantity="other">%d birthdays soon</item>
    </plurals>
    <plurals name="nobirthdayssoon">
        <item quantity="one">No birthdays tomorrow.</item>
        <item quantity="other">No birthdays in the next %d days.</item>
    </plurals>
    <plurals name="imported">
        <item quantity="one">Imported %d record.</item>
        <item quantity="other">Imported %d records.</item>
    </plurals>
    <plurals name="delete_records">
        <item quantity="one">Do you really want to delete this record?</item>
        <item quantity="other">Do you really want to delete %d records?</item>
    </plurals>
    <string name="selected_records">Selected records</string>
    <string name="app_name">Customer Database</string>
    <string name="version">v%1$s</string>
    <string name="simplecustomermanagement">Simple Customer Management</string>
    <string name="website">Website:</string>
    <string name="email">E-Mail:</string>
    <string name="person">Person</string>
    <string name="title">Title</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="contact">Contact</string>
    <string name="phonehome">Phone Home</string>
    <string name="phonemobile">Phone Mobile</string>
    <string name="phonework">Phone Work</string>
    <string name="emailfield">E-Mail</string>
    <string name="address">Address</string>
    <string name="streetnumber">Street and House Number</string>
    <string name="zipcode">Zipcode</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="notes">Notes</string>
    <string name="birthday">Birthday</string>
    <string name="apiconnection">Synchronization</string>
    <string name="apiurl">URL to Web-API</string>
    <string name="name">Name</string>
    <string name="name_cannot_be_empty">Name cannot be empty</string>
    <string name="lastchanged">Last changed</string>
    <string name="search">Search …</string>
    <string name="settings">Settings</string>
    <string name="syncnow">Sync Now</string>
    <string name="birthdays">Birthdays</string>
    <string name="information">Information</string>
    <string name="closedb">Close Database</string>
    <string name="removecustomer">Remove Customer</string>
    <string name="exportcustomer">Export Customer</string>
    <string name="id">ID</string>
    <string name="detailview">Detail View</string>
    <string name="reallydelete">Do you really want to delete this customer?</string>
    <string name="delete">Delete</string>
    <string name="abort">Cancel</string>
    <string name="sendfeedback">Send Feedback</string>
    <string name="feedbacktitle">Feedback Customer Database Android</string>
    <string name="emailtocustomer">Send E-Mail to Customer</string>
    <string name="syncsuccess">Sync successful</string>
    <string name="syncfail">Sync failed</string>
    <string name="ok">OK</string>
    <string name="eulaaccept">I agree</string>
    <string name="eula_title">End User License Agreement</string>
    <string name="eula">There is no warranty for this software, to the extent permitted by applicable law. The copyright holders provide the program "as is", without any guarantee, neither expressly nor implicitly, including - but not limited to - the implied warranties of merchantability and fitness for a particular purpose. The entire risk as to the quality and performance of the program is with you. Should the program prove defective, you assume the cost of all necessary servicing, repair or correction. In no event unless required by applicable law or agreed to in writing will any copyright holder, or any other party who modifies and/or conveys the program, be liable to you for damages.\n\nPlease make sure to inform your customers about the digital processing of personal data in accordance with the General Data Protection Regulation (EU GDPR).</string>
    <string name="birthdaytodaynote">(today)</string>
    <string name="fix">Fix</string>
    <string name="export_single_csvonly">Save CSV file</string>
    <string name="export_single_title">Export single customer record</string>
    <string name="export_single_text">With this function you can inform a person about the data saved about him (required by section 15 EU-GDPR - General Data Protection Regulation).\n\nPlease select a method, how to export the data.</string>
    <string name="email_subject">eMail Subject</string>
    <string name="email_template">eMail Template</string>
    <string name="email_template_long">eMail Template (CUSTOMER will be replaced with the customer name)</string>
    <string name="text_templates">Text Templates</string>
    <string name="email_subject_template"> </string>
    <string name="email_text_template">Dear CUSTOMER,\n\nBest regards</string>
    <string name="email_export_subject">Export mail subject</string>
    <string name="email_export_template">Export mail text</string>
    <string name="email_export_subject_template">Information about your data saved in our database</string>
    <string name="email_export_text_template">We would like to inform you about your personal data saved in our database. You can find your exported record as CSV file attachment in this e-mail. CSV files can be opened with any standard spreadsheet software (for example LibreOffice Calc).\nProcessing purpose:\nCategories of personal data:\nReceiver of personal data:\nPlanned duration of storage:\nSource of the data:\nYou have at any time the right of correction and deletion of your data. You can declare this intention for example in an answer to this e-mail.</string>
    <string name="newsletter_template">Newsletter text</string>
    <string name="im_export_all_title">Import and Export Menu</string>
    <string name="im_export_all_text">With this function, you can import customers or export all records into a single file.</string>
    <string name="im_export_all_text_additional">CSV files can be opened with any standard spreadsheet software (for example LibreOffice Calc). VCF files can be opened with email programs like Thunderbird.</string>
    <string name="export_ok">Export successful</string>
    <string name="export_fail">Unable to save file</string>
    <string name="consent">Consent for data processing</string>
    <string name="view">View</string>
    <string name="remove">Remove</string>
    <string name="newsletter">Newsletter</string>
    <string name="newsletter_text_template">"If you want to unsubscribe from this newsletter, please send a reply with 'unsubscribe' as subject."</string>
    <string name="newsletter_no_customers_title">No newsletter customers available</string>
    <string name="printcustomer">Print Customer (PDF)</string>
    <string name="vouchers">Vouchers</string>
    <string name="redeem">Redeem</string>
    <string name="close">Close</string>
    <string name="print">Print (PDF)</string>
    <string name="im_export">Im-/ Export</string>
    <string name="apply">Apply</string>
    <string name="input_only_mode">Input-Only Mode</string>
    <string name="more">More…</string>
    <string name="custom_field_title">Field Name</string>
    <string name="alphanumeric">Alphanumeric</string>
    <string name="drop_down">Drop Down Selection List</string>
    <string name="numeric">Numeric</string>
    <string name="date">Date</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="sort_asc">Sort Ascending</string>
    <string name="sort_desc">Sort Descending</string>
    <string name="lock_app">Lock App</string>
    <string name="restrict_access">Restrict Access</string>
    <string name="additional_features">Additional Features</string>
    <string name="remove_selected">Remove Selected</string>
    <string name="general">General</string>
    <string name="customers">Customers</string>
    <string name="remove_voucher">Remove Voucher</string>
    <string name="alphanumeric_multi_line">Alphanumeric (Multi Line)</string>
    <string name="ios_app_available">iOS App Available</string>
    <string name="sync_data_with_your_ios_device">Sync data with your iOS device!</string>
    <string name="new_version">New Version</string>
    <string name="cloud_service">Cloud Service</string>
    <string name="subscribe_to_cloud_service">Subscribe to Cloud Service</string>
    <string name="create_cloud_account">Create Account</string>
    <string name="own_server">Own Server</string>
    <string name="own_server_text">The customer database server is Open Source, so you can set up an own database server. This assumes that you are familiar with the Apache Webserver, PHP and MySQL. Please visit the GitHub page for more information.</string>
    <string name="sync_feature_capabilities">Sync Feature Capabilities</string>
    <string name="sync_feature_capabilities_text">With the sync feature you can backup your customer data on a database server and sync it over multiple devices. You have the following options to use this feature.</string>
    <string name="cloud_service_text1">You can use the paid customer database cloud.</string>
    <string name="cloud_service_step1">1. Create an account.</string>
    <string name="cloud_service_step2">2. Please subscribe to the customer database cloud access license to connect to the cloud. (A recurring payment is necessary because the database server used for this service incurs running costs.)</string>
    <string name="cloud_service_step3">3. Press the sync button on the main screen regularly to upload your data in the cloud. Optionally, you can log in with the same account on other devices to sync the data to this device.</string>
    <string name="register_now2">Register Now</string>
    <string name="confirmation_mail_will_be_sent">A confirmation link will be sent to your email address.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="choose_a_password">Choose a Password</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="reset_password">Reset Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="i_accept_cloud_terms">I accept the terms of service and privacy policy</string>
    <string name="how_does_the_sync_function_work">How does the sync function work? (FAQ)</string>
    <string name="custom_field">Custom Field</string>
    <string name="last_name_default">Last Name (Default)</string>
    <string name="calendar">Calendar</string>
    <string name="remove_appointment">Remove Appointment</string>
    <string name="export_appointment">Export Appointment</string>
</resources>