<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="false"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_version"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ios_app_available"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sync_data_with_your_ios_device"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
            <Button
                style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/more" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <Button
                android:id="@+id/buttonClose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/close" />

        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
